# rust-seminar

./: Cargo.toml  README.md  package-lock.json  package.json  tailwind.css
assets/: tailwind.css
dioxus/: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json
dioxus/src/: routes.rs
dioxus/src/components/: controlled_input.rs  mod.rs  navbar.rs
dioxus/src/components/callback/: component.rs  handler.rs  mod.rs
dioxus/src/components/context_provider/: child.rs  mod.rs  parent.rs
dioxus/src/components/counters/: counter.rs  mod.rs
dioxus/src/components/desktop/: mod.rs
dioxus/src/components/fullstack/: buttons.rs  futures.rs  mod.rs
dioxus/src/components/global_signal/: buttons.rs  mod.rs
dioxus/src/components/global_state/: buttons.rs  mod.rs
dioxus/src/services/: mod.rs
dioxus/src/utils/: desktop.rs
egui/: Cargo.toml  README.md  index.html
egui/src/: app.rs  lib.rs  main.rs  router.rs  state.rs
egui/src/components/: controlled_input.rs  counter.rs  mod.rs  navbar.rs  router.rs
egui/src/components/callback/: component.rs  external_logic.rs  handler.rs  mod.rs
egui/src/components/context_provider/: child.rs  mod.rs  parent.rs
egui/src/components/counters/: counter.rs  global_counter.rs  mod.rs
egui/src/components/global_counters/: global_counter.rs  mod.rs
next/: README.md  package-lock.json  package.json
next/app/: globals.css  layout.tsx  page.tsx
next/app/_components/: navbar.tsx
next/app/_lib/: store.ts
next/app/callbacks/: _lib.ts  page.tsx
next/app/context-providers/: page.tsx
next/app/context-providers/_components/: child.tsx  common.ts  parent.tsx
next/app/controlled-input/: page.tsx
next/app/counters/: page.tsx
next/app/counters/_components/: counter.tsx
next/app/fullstack/: _lib.ts  page.tsx
next/app/fullstack/_components/: buttons.tsx  future.tsx
next/app/global-state/: page.tsx
next/app/global-state/_components/: buttons.tsx
src/: main.rs  routes.rs  utils.rs
src/components/: container.rs  controlled_input.rs  counter.rs  desktop_menu.rs  inputter.rs  mod.rs  navbar.rs  oauth.rs
src/components/callback/: component.rs  handler.rs
src/components/context_provider/: child.rs  mod.rs  parent.rs
src/components/desktop/: about.rs  menu.rs  mod.rs
src/components/fullstack/: futures.rs  mod.rs  nullifiers.rs
src/components/global_signal/: buttons.rs  mod.rs  model.rs
src/services/: mod.rs
src/utils/: desktop.rs  mod.rs
