[package]
name = "rust-seminar"
version = "0.1.0"
authors = ["Tamás Tóth <tomjtoth@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-oauth = "0.6.4"
serde = "1.0.219"

[features]
default = ["web"]
web = ["dioxus-oauth/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus-oauth/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
