[package]
name = "rust-seminar-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.2"
log = "0.4.27"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

[target.'cfg(target_arch = "wasm32")'.profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[target.'cfg(target_arch = "wasm32")'.profile.dev.package."*"]
opt-level = 2

# Android
[target.'cfg(target_os = "android")'.lib]
crate-type=["lib", "cdylib"]

[target.'cfg(target_os = "android")'.profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[target.'cfg(target_os = "android")'.dependencies.android_logger]
version = "0.15"
default-features = false

[target.'cfg(target_os = "android")'.dependencies.eframe]
version = "0.33"
default-features = false
features = [
    "wgpu",
    # "android-native-activity",
    "android-game-activity",
    "default_fonts",
]

[target.'cfg(target_os = "android")'.dependencies.wgpu]
version = "27"
default-features = false
features = [
    "gles",
]

# Used to get same winit used by eframe.
[target.'cfg(target_os = "android")'.dependencies.egui-winit]
version = "0.33"
default-features = false
features = [
    "clipboard",
    "links",
]
